--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,3 +10,8 @@
 @import "./base/animations";
 // @import "./base/typography";
 @import "./base/utilities";
+
+@import "./layout/navigation.scss";
+@import "./components/buttons.scss";
+
+@import "./pages/index.scss";
