--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,6 +12,8 @@
 @import "./base/utilities";
 
 @import "./layout/navigation.scss";
+
 @import "./components/buttons.scss";
+@import "./components/participants.scss";
 
 @import "./pages/index.scss";
