--- a/views/participants.ejs
+++ b/views/participants.ejs
@@ -1,12 +1,14 @@
 <section class="participants">
   <h1 class="heading-1 wrapper-main">Учасники</h1>
   <ul class="tabs wrapper-main">
-    <li><p>театр</p></li>
+    <li class="active"><p>театр</p></li>
     <li><p>Візуальне мистецтво</p></li>
     <li><p>Аудіо Перформанс</p></li>
     <li><p>Кіно</p></li>
     <li><p>освітня програма</p></li>
     <li><p>Тату майстри</p></li>
   </ul>
-  <div class="participants--wrapper wrapper-main"></div>
+  <div class="participants--wrapper wrapper-main">
+    <%- include("participants-section/music.ejs") %>
+  </div>
 </section>
