--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,6 +2,8 @@
 
 <body class="">
   <%- include('layout/nav.ejs') %>
-  <main><%- include('hero.ejs') %><%- include('participants.ejs') %></main>
+  <main>
+    <%- include('hero.ejs') %><%- include('participants.ejs') %><%- include('support.ejs') %>
+  </main>
   <%- include('layout/end.ejs') %>
 </body>
