--- a/views/layout/nav.ejs
+++ b/views/layout/nav.ejs
@@ -12,6 +12,6 @@
       <li><a href=""> Розклад</a></li>
       <li><a href=""> Мапа</a></li>
     </ul>
-    <button class="donate">Допомогти</button>
+    <button class="donate">Підтримати</button>
   </nav>
 </header>
