--- a/views/participants.ejs
+++ b/views/participants.ejs
@@ -8,7 +8,5 @@
     <li><p>освітня програма</p></li>
     <li><p>Тату майстри</p></li>
   </ul>
-  <div class="participants--wrapper wrapper-main">
-    <%- include("participants-section/music.ejs") %>
-  </div>
+  <div class="participants--wrapper"><%- include("participants-section/music.ejs") %></div>
 </section>
