--- a/sass/base/typography.scss
+++ b/sass/base/typography.scss
@@ -1,69 +1,68 @@
 @import "../abstracts/typography-styles-mixins.scss";
 
-.nav-font {
-  @include nav-font;
+.hero-font {
+  @include hero-font;
 }
 
 .heading-1 {
   @include heading-1;
-  @include respond(phone) {
-    @include heading-1--mob;
-  }
+  // @include respond(phone) {
+  //   @include heading-1--mob;
+  // }
 }
 
 .heading-2 {
   @include heading-2;
-  @include respond(phone) {
-    @include heading-2--mob;
-  }
+  // @include respond(phone) {
+  //   @include heading-2--mob;
+  // }
 }
 
 .heading-3 {
-  @include respond(phone) {
-    @include heading-3--mob;
-  }
+  // @include respond(phone) {
+  //   @include heading-3--mob;
+  // }
   @include heading-3;
 }
 
 .heading-4 {
   @include heading-4;
-  @include respond(phone) {
-    @include heading-4--mob;
-  }
+  // @include respond(phone) {
+  //   @include heading-4--mob;
+  // }
 }
 
 .heading-5 {
-  @include heading-5;
-}
-
-.heading-6 {
-  @include heading-6;
+  @include heading-4;
+  // @include respond(phone) {
+  //   @include heading-4--mob;
+  // }
 }
 
 .paragraph {
   @include paragraph;
+  // @include respond(phone) {
+  //   @include heading-4--mob;
+  // }
 }
 
-.tag {
-  @include tag;
-  color: $color-a;
+.paragraph-bold {
+  @include paragraph-bold;
+  // @include respond(phone) {
+  //   @include heading-4--mob;
+  // }
 }
 
-.heading-4--mob {
-  @include heading-4--mob;
+.paragraph {
+  @include paragraph;
+  // @include respond(phone) {
+  //   @include heading-4--mob;
+  // }
 }
 
-.heading-3--mob {
-  @include heading-3--mob;
-}
-
-.sub--mob {
-  @include sub--mob;
-}
-
-.btn-txt {
-  @include btn-txt;
-  @include respond(phone) {
-    @include btn-txt--mob;
-  }
+.paragraph-min {
+  @include paragraph-min;
+  // @include respond(phone) {
+  //   @include heading-4--mob;
+  // }
 }
