--- a/views/layout/nav.ejs
+++ b/views/layout/nav.ejs
@@ -1,16 +1,16 @@
 <header class="">
   <div class="branding">
     <img src="/src/imgs/ava-img-blue.svg" alt="art-weapon logo" />
-    <h4>
+    <h4 class="paragraph">
       Мистецтво <br />
       зброя!
     </h4>
   </div>
   <nav class="navigation">
     <ul>
-      <li><a href=""> Учасники</a></li>
-      <li><a href=""> Розклад</a></li>
-      <li><a href=""> Мапа</a></li>
+      <li><a href="" class="paragraph"> Учасники</a></li>
+      <li><a href="" class="paragraph"> Розклад</a></li>
+      <li><a href="" class="paragraph"> Мапа</a></li>
     </ul>
     <button class="donate">Підтримати</button>
   </nav>
