--- a/views/participants-section/education/kozlovskyy.ejs
+++ b/views/participants-section/education/kozlovskyy.ejs
@@ -1,13 +1,13 @@
 <div class="participant">
-  <h3 class="heading-3">Koloah</h3>
+  <h3 class="heading-3">Ігор Козловський</h3>
   <div class="participant__pic">
-    <img src="/src/imgs/participants/koloah-serenity.webp" alt="koloah serenity cover" />
+    <img src="/src/imgs/participants/kozlovskyy.jpeg" alt="kozlovskyy cover" />
     <div>
       <div class="dot"></div>
-      <p>16:00</p>
+      <p class="heading-5">12:00</p>
     </div>
   </div>
-  <p class="participant__desc">
+  <p class="participant__desc paragraph-min">
     On last year’s Millennium Sun, Dmitriy Avksentiev grappled with futurism’s pleasures and terrors
     by revisiting the past. Inspired by classic science-fiction films like Blade Runner and Akira,
     the Ukrainian electronic musician, aka Koloah and Voin Oruwu, set out to craft an album about
