--- a/views/participants-section/music/gnatenko.ejs
+++ b/views/participants-section/music/gnatenko.ejs
@@ -1,5 +1,5 @@
 <div class="participant">
-  <h3 class="title-3">Koloah</h3>
+  <h3 class="heading-3">Koloah</h3>
   <div class="participant__pic">
     <img src="/src/imgs/participants/gnatenko-u.jpeg" alt="koloah serenity cover" />
     <div>
