--- a/views/participants-section/music/monoconda.ejs
+++ b/views/participants-section/music/monoconda.ejs
@@ -1,5 +1,5 @@
 <div class="participant">
-  <h3 class="title-3">Monoconda</h3>
+  <h3 class="heading-3">Monoconda</h3>
   <div class="participant__pic">
     <img src="/src/imgs/participants/monoconda-identity.jpeg" alt="monoconda identity cover" />
     <div>
