--- a/views/support.ejs
+++ b/views/support.ejs
@@ -4,8 +4,8 @@
     <img src="/src/imgs/logo-yellow.png" alt="artweapon logo" />
   </div>
   <div class="support__text">
-    <p>Як можна нас підтримати</p>
-    <p>
+    <p class="paragraph-bold">Як можна нас підтримати</p>
+    <p class="paragraph-min">
       Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
       been the industry's standard dummy text ever since the 1500s, when an unknown printer took a
       galley of type and scrambled it to make a type specimen book. Lorem Ipsum is simply dummy text
@@ -16,19 +16,19 @@
   </div>
   <div class="support__details">
     <div>
-      <p class="uppercase">МОНОБАНК</p>
-      <p class="uppercase data">4441 1144 5738 7247</p>
+      <p class="heading-2 uppercase">МОНОБАНК</p>
+      <p class="heading-2 uppercase data">4441 1144 5738 7247</p>
     </div>
     <div>
-      <p class="uppercase">ПРИВАТБАНК</p>
-      <p class="uppercase data">4441 1144 5738 7247</p>
+      <p class="heading-2 uppercase">ПРИВАТБАНК</p>
+      <p class="heading-2 uppercase data">4441 1144 5738 7247</p>
     </div>
     <div>
-      <p class="uppercase">МІЖНАРОДНІ ПЕРЕКАЗИ</p>
-      <p class="uppercase data">SWIFT / IBAN</p>
+      <p class="heading-2 uppercase">МІЖНАРОДНІ ПЕРЕКАЗИ</p>
+      <p class="heading-2 uppercase data">SWIFT / IBAN</p>
     </div>
     <div>
-      <p class="uppercase">PAYPAL</p>
+      <p class="heading-2 uppercase">PAYPAL</p>
     </div>
   </div>
 </section>
