--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,7 +8,7 @@
 @import "./base/base";
 @import "./base/colors";
 @import "./base/animations";
-// @import "./base/typography";
+@import "./base/typography";
 @import "./base/utilities";
 
 @import "./layout/navigation.scss";
