--- a/sass/pages/index.scss
+++ b/sass/pages/index.scss
@@ -5,6 +5,7 @@
   display: grid;
   grid-template-columns: repeat(12, 1fr);
   column-gap: 0.6rem;
+  margin-top: 9rem;
   &__theatre {
     grid-column: 1 / 7;
   }
@@ -13,6 +14,8 @@
     &__meta {
       &__date {
         display: flex;
+
+        align-items: center;
         div {
           margin-right: 1rem;
           background-color: $color-main-b;
@@ -20,6 +23,8 @@
       }
       &__loc {
         display: flex;
+        // justify-content: center;
+        align-items: center;
         margin-top: 1rem;
         div {
           margin-right: 1rem;
@@ -55,8 +60,7 @@
       }
       p {
         color: black;
-
-        text-transform: uppercase;
+        text-transform: capitalize;
       }
     }
   }
@@ -87,16 +91,23 @@
       }
       &__pic {
         position: relative;
-        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        // width: 100%;
+        // height: 100%;
         margin-top: 2rem;
         img {
           width: 100%;
+          object-fit: contain;
         }
         > div {
           position: absolute;
           left: 2rem;
           bottom: 2rem;
           display: flex;
+          justify-content: center;
+          align-items: center;
           .dot {
             margin-right: 1rem;
             background-color: $color-main-b;
@@ -117,8 +128,8 @@
 .support {
   display: grid;
   grid-template-columns: repeat(12, 1fr);
-  column-gap: 0.6rem;
-  margin-top: 10rem;
+  column-gap: 2rem;
+  margin: 10rem 0;
   &__title {
     grid-column: 1 / 7;
     img {
@@ -128,8 +139,8 @@
   }
   &__text {
     grid-column: 7 / 10;
-    &:first-child {
-      font-weight: bold;
+    p {
+      margin-bottom: 2rem;
     }
   }
   &__details {
@@ -137,7 +148,7 @@
     > div {
       border-radius: 50px;
       border: 1px solid black;
-      padding: 3rem 4.2rem;
+      padding: 2rem 3rem;
       margin-top: 1.6rem;
     }
   }
