--- a/views/hero.ejs
+++ b/views/hero.ejs
@@ -1,26 +1,29 @@
 <section class="hero wrapper-main">
   <div class="hero__theatre">
-    <h1>мисте</h1>
-    <h1>цтво</h1>
-    <h1>зброя</h1>
+    <h1 class="hero-font">мисте</h1>
+    <h1 class="hero-font">цтво</h1>
+    <h1 class="hero-font">зброя</h1>
   </div>
   <div class="hero__desc">
     <div class="hero__desc__meta">
       <div class="hero__desc__meta__date">
         <div class="dot"></div>
-        <p>3.05.2022</p>
+        <p class="paragraph">3.05.2022</p>
       </div>
       <div class="hero__desc__meta__loc">
         <div class="dot"></div>
-        <p>Нижньорюрківська, 31</p>
+        <p class="paragraph">Нижньорюрківська, 31</p>
       </div>
     </div>
     <div class="hero__desc__about">
-      <p>Про подію</p>
-      <p>
-        Event-заходи проводяться для того, щоб позитивно впливати на думку аудиторії, налагоджувати
-        ділові контакти, обмінятися досвідом. У маркетингу івенти від Ивент агентства Эмбиент
-        вважаються важливими інструментами.
+      <p class="paragraph-bold">Про подію</p>
+      <p class="paragraph">
+        «Мистецтво–Зброя!» — це день сучасної української культури в стінах НЮ31. <br />
+        Ми зібрали разом близьких митців та мисткинь , артистів, музикантів, аби вони поділились
+        своїми відчуттями війни. <br />
+        «Мистецтво–Зброя!» — це культурний діалог митців та мисткинь під час війни. Можливість,
+        крізь оптику іншого, відчути інакший досвід проживання теперішнього. Мистецтво, що актуальне
+        на часі війни, чи створене у війні. Спроба осягнути хто ми, в який час живемо та куди йдемо.
       </p>
     </div>
     <ul class="hero__desc__bages">
