--- a/views/participants.ejs
+++ b/views/participants.ejs
@@ -1,12 +1,12 @@
 <section class="participants">
   <h1 class="heading-1 wrapper-main">Учасники</h1>
   <ul class="tabs wrapper-main">
-    <li class="paragraph active" id="theatre"><p>театр</p></li>
-    <li class="paragraph" id="music"><p>Аудіо Перформанс</p></li>
-    <li class="paragraph" id="visual"><p>Візуальне мистецтво</p></li>
-    <li class="paragraph" id="cinema"><p>Кіно</p></li>
-    <li class="paragraph" id="education"><p>освітня програма</p></li>
-    <li class="paragraph" id="tatoo"><p>Тату майстри</p></li>
+    <li class="paragraph active" id="theatre">театр</li>
+    <li class="paragraph" id="music">Аудіо Перформанс</li>
+    <li class="paragraph" id="visual">Візуальне мистецтво</li>
+    <li class="paragraph" id="cinema">Кіно</li>
+    <li class="paragraph" id="education">освітня програма</li>
+    <li class="paragraph" id="tatoo">Тату майстри</li>
   </ul>
   <div class="participants--wrapper">
     <%- include("participants-section/music.ejs") %><%- include("participants-section/theatre.ejs")
